<package format="2">
  <name>turtlebot3_training</name>
  <version>0.0.1</version>
  <description>turtlebot3_training packages</description>
  <maintainer email="kelvinkang@cmu.edu">kelvinkang</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>turtlebot3_gazebo</depend>
  <depend>turtlebot3_description</depend>

</package>
